--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -138,7 +138,12 @@
                     </dependency>
                 </dependencies>
             </plugin>
-
+            <!-- version-eye -->
+            <plugin>
+                <groupId>com.versioneye</groupId>
+                <artifactId>versioneye-maven-plugin</artifactId>
+                <version>3.11.4</version>
+            </plugin>
             <!-- create test jars -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
