--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -22,12 +22,12 @@
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>runtime-cli</artifactId>
-           <!-- <exclusions>
+           <exclusions>
                 <exclusion>
                     <groupId>org.postgresql</groupId>
                     <artifactId>postgresql</artifactId>
                 </exclusion>
-            </exclusions>-->
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
-            <version>5.1.0.BUILD-SNAPSHOT</version>
+            <version>${org.springframework.security.ver}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
