--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -26,6 +26,8 @@
         <com.nhaarman.mockito-kotlin.version>1.5.0</com.nhaarman.mockito-kotlin.version>
         <org.javamoney.moneta.version>1.1</org.javamoney.moneta.version>
         <org.zalando.jackson-datatype-money.version>1.0.0-RC2</org.zalando.jackson-datatype-money.version>
+        <version.eye>3.11.4</version.eye>
+        <org.springframework.security.ver>5.1.0.BUILD-SNAPSHOT</org.springframework.security.ver>
     </properties>
 
     <dependencies>
@@ -142,7 +144,7 @@
             <plugin>
                 <groupId>com.versioneye</groupId>
                 <artifactId>versioneye-maven-plugin</artifactId>
-                <version>3.11.4</version>
+                <version>${version.eye}</version>
             </plugin>
             <!-- create test jars -->
             <plugin>
