--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,23 @@ services:
 
 # -B batch mode makes Maven less verbose
 script: mvn -B clean verify
+script:
+  - docker run -v $TRAVIS_BUILD_DIR:/documents/ --name asciidoc-to-html asciidoctor/docker-asciidoctor asciidoctor -D docs "integration-tests/src/main/asciidoc/readme.adoc"
+  - docker run -v $TRAVIS_BUILD_DIR:/documents/ --name asciidoc-to-pdf asciidoctor/docker-asciidoctor asciidoctor-pdf -D docs "integration-tests/src/main/asciidoc/readme.adoc"
+
+after_error:
+  - docker logs asciidoc-to-html
+  - docker logs asciidoc-to-pdf
+
+after_failure:
+  - docker logs asciidoc-to-html
+  - docker logs asciidoc-to-pdf
+after_success:
+  - cd $TRAVIS_BUILD_DIR/docs
+  - mv readme.html index.html
+  - cd ..
+  - git config user.name "${GH_USER_NAME}"
+  - git config user.email "${GH_USER_EMAIL}"
+  - git checkout master
+  - git add . ; sudo git commit -m "#18 Deploy to GitHub Pages number ${TRAVIS_BUILD_NUMBER}"
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}"
