--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ after_success:
   - git config user.name "${GH_USER_NAME}"
   - git config user.email "${GH_USER_EMAIL}"
   - git checkout master
-  - git add . ; sudo git commit -m "#18 Deploy to GitHub Pages number ${TRAVIS_BUILD_NUMBER}"
+  - git add . ; sudo git commit -m "#18 Deploy to GitHub Pages number ${TRAVIS_BUILD_NUMBER} [ci skip]"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}"
