--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,9 @@ script:
 
 after_success:
   - cp $TRAVIS_BUILD_DIR/integration-tests/target/generated-docs/readme.html $TRAVIS_BUILD_DIR/docs/index.html
-  - cd ..
   - git config user.name "${GH_USER_NAME}"
   - git config user.email "${GH_USER_EMAIL}"
-  - git checkout -b "Branch to compilation for the number ${TRAVIS_BUILD_NUMBER}"
+  - git checkout "Branch to compilation for the number ${TRAVIS_BUILD_NUMBER}"
   - git add .
   - git commit -m "#18 Deploy to GitHub Pages number ${TRAVIS_BUILD_NUMBER}"
   - git push --quiet "https://${GH_TOKEN}@${GH_REF}"
