--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ after_success:
   - git config user.email "${GH_USER_EMAIL}"
   - git checkout -b branch-compilation-number-${TRAVIS_BUILD_NUMBER}
   - git add .
-  - git commit -m "#18 Deploy to GitHub Pages number ${TRAVIS_BUILD_NUMBER}"
+  - git commit -m "#18 Deploy to GitHub Pages number ${TRAVIS_BUILD_NUMBER} [ci skip]"
   - git push --quiet "https://${GH_TOKEN}@${GH_REF}"
