--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ services:
 script:
   - mvn -B clean verify
 
+branches:
+  only:
+  - master
+
 after_success:
   - cp $TRAVIS_BUILD_DIR/integration-tests/target/generated-docs/readme.html $TRAVIS_BUILD_DIR/docs/index.html
   - git config user.name "${GH_USER_NAME}"
